k8s-limbo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: limbo-deployment
  labels:
    app: limbo
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  replicas: 1
  selector:
    matchLabels:
      app: limbo
  template:
    metadata:
      labels:
        app: limbo
    spec:
      containers:
      - name: mc-limbo
        image: mc-limbo 
        imagePullPolicy: Never
        ports:
        - name: game-port
          containerPort: 25565
          hostPort: 25565
        resources:
          requests:
            cpu: 50m
            memory: 256Mi
          limits:
            cpu: 1
            memory: 750Mi
