k8s-seed.yml
apiVersion: v1
kind: Pod
metadata:
  name: seeder
  labels:
    app: bash
spec:
  containers:
  - name: file-loader
    image: busybox
    command:
    - /bin/sh
    - "-c"
    - "sleep infinity"
    volumeMounts:
    - name: velocity-config
      mountPath: /seed/velocity-config
    - name: survival-mods
      mountPath: /seed/survival-mods
    - name: survival-config
      mountPath: /seed/survival-config
    - name: creative-mods
      mountPath: /seed/creative-mods
    - name: creative-config
      mountPath: /seed/creative-config
  restartPolicy: OnFailure
  volumes:
  - name: velocity-config
    persistentVolumeClaim:
      claimName: velocity-config
  - name: survival-mods
    persistentVolumeClaim:
      claimName: survival-mods
  - name: survival-config
    persistentVolumeClaim:
      claimName: survival-config
  - name: creative-mods
    persistentVolumeClaim:
      claimName: creative-mods
  - name: creative-config
    persistentVolumeClaim:
      claimName: creative-config
