k8s-creative.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: creative-deployment
  labels:
    app: creative
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  replicas: 1
  selector:
    matchLabels:
      app: creative
  template:
    metadata:
      labels:
        app: creative
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: creative-data
      - name: mods
        persistentVolumeClaim:
          claimName: creative-mods
          readOnly: true
      - name: config
        persistentVolumeClaim:
          claimName: creative-config
          readOnly: true
      containers:
      - name: creative
        image: itzg/minecraft-server
        imagePullPolicy: Always
        volumeMounts:
        - name: data
          mountPath: /data
        - name: mods
          mountPath: /mods
        - name: config
          mountPath: /config
        ports:
        - name: game-port
          containerPort: 25565
        resources:
          requests:
            cpu: 500m
            memory: 2Gi
          limits:
            cpu: 4000m
            memory: 8Gi
---
apiVersion: v1
kind: Service
metadata:
  name: creative-service
spec:
  selector:
    app: creative
  ports:
  - name: default
    protocol: TCP
    port: 25565
    targetPort: 25565
