k8s-limbo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: limbo-service
spec:
  selector:
    app: limbo
  ports:
  - name: default
    protocol: TCP
    port: 25565
    targetPort: 25565
