k8s-velocity-service.yml
apiVersion: v1
kind: Service
metadata:
  name: velocity-service
spec:
  type: NodePort
  selector:
    app: velocity
  ports:
  - name: default
    protocol: TCP
    port: 25577
    targetPort: 25577
    nodePort: 32565
