k8s-velocity.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: velocity-deployment
  labels:
    app: velocity
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  replicas: 1
  selector:
    matchLabels:
      app: velocity
  template:
    metadata:
      labels:
        app: velocity
    spec:
      containers:
      - name: mc-velocity
        image: public.ecr.aws/p2i2f2e4/velocity:latest
        imagePullPolicy: Always
        ports:
        - name: game-port
          containerPort: 25577
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 1000m
            memory: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: velocity-service
spec:
  type: NodePort
  selector:
    app: velocity
  ports:
  - name: default
    protocol: TCP
    port: 25577
    targetPort: 25577
    nodePort: 32565
